accessible: remove an unneeded unref

That unref is done inside an if that starts with a !parent condition, so
unrefing it doesn't makes sense

https://bugzilla.gnome.org/show_bug.cgi?id=706893